# native-tls-shim

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  extension-plan.md
.github/workflows/: ci.yml
cmake/: FindOpenSSL.cmake  OpenSSLConfig.cmake.in
example/: CMakeLists.txt  httplib_example.cpp  httplib_https_server_example.cpp  ixwebsocket_example.cpp  ixwebsocket_wss_server_example.cpp
openssl/: bio.h  conf.h  crypto.h  dh.h  engine.h  err.h  evp.h  pem.h  rsa.h  ssl.h
scripts/: wss_harness.py
src/: tls_apple.cpp  tls_apple.h  tls_backend.cpp  tls_internal.hpp  tls_mbedtls.cpp  tls_mbedtls.h  tls_schannel.cpp  tls_schannel.h
test/: CMakeLists.txt  debug_schannel_init.cpp  run_asio_https_roundtrip.py  run_tls13_only_test.py  test_asio_https_client.cpp  test_asio_https_server.cpp  test_cipher_list_validation.cpp  test_evp_hash.cpp  test_httplib_client.cpp  test_httplib_hostname_mismatch.cpp  test_httplib_in_memory_ca.cpp  test_httplib_mtls.cpp  test_httplib_peer_cert.cpp  test_httplib_server.cpp  test_httplib_spoofed_ca.cpp  test_httplib_verify_disabled.cpp  test_ixhttp_tls_matrix.cpp  test_ixwebsocket_client.cpp  test_ixwebsocket_mtls.cpp  test_ixwebsocket_server.cpp  test_ixwebsocket_verify_disabled.cpp  test_private_key_mismatch.cpp  test_tls13_only_client.cpp  test_tls13_only_server.cpp  test_wildcard_host_validation.cpp  tls_paths.h
test/fixtures/: invalid-wildcard-crt.pem  spoofed-ca-crt.pem  trusted-ca-crt.pem  trusted-client-crt.pem  trusted-client-key.pem  trusted-server-crt.pem  trusted-server-key.pem  untrusted-ca-crt.pem  untrusted-client-crt.pem  untrusted-client-key.pem  valid-wildcard-crt.pem  wrong-name-server-crt.pem  wrong-name-server-key.pem
test/tls13_server/: CMakeLists.txt  main.cpp
