set(_cpp_httplib_dir "${CMAKE_SOURCE_DIR}/test/cpp-httplib")
set(_ixws_dir "${CMAKE_SOURCE_DIR}/test/IXWebSocket")

if(TARGET httplib::httplib OR EXISTS "${_cpp_httplib_dir}/httplib.h")
  add_executable(httplib_example httplib_example.cpp)
  if(TARGET httplib::httplib)
    target_link_libraries(httplib_example PRIVATE httplib::httplib OpenSSL::SSL OpenSSL::Crypto)
  else()
    target_include_directories(httplib_example PRIVATE "${_cpp_httplib_dir}")
    target_compile_definitions(httplib_example PRIVATE CPPHTTPLIB_OPENSSL_SUPPORT)
    target_link_libraries(httplib_example PRIVATE OpenSSL::SSL OpenSSL::Crypto)
  endif()
else()
  message(STATUS "Skipping httplib_example (cpp-httplib not available)")
endif()

if(TARGET ixwebsocket)
  add_executable(ixwebsocket_example ixwebsocket_example.cpp)
  target_link_libraries(ixwebsocket_example PRIVATE ixwebsocket OpenSSL::SSL OpenSSL::Crypto)
else()
  message(STATUS "Skipping ixwebsocket_example (ixwebsocket target not available)")
endif()
